--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,15 @@
+@article{wood2012reproducibility,
+  title={Reproducibility of serology assays for pandemic influenza H1N1: collaborative study to evaluate a candidate WHO International Standard},
+  author={Wood, John M and Major, Diane and Heath, Alan and Newman, Robert W and H{\"o}schler, Katja and Stephenson, Iain and Clark, Tristan and Katz, Jacqueline M and Zambon, Maria C},
+  journal={Vaccine},
+  volume={30},
+  number={2},
+  pages={210--217},
+  year={2012},
+  publisher={Elsevier}
+}
+
+
 @article{gouma2020antigenic,
   title={Antigenic assessment of the H3N2 component of the 2019-2020 Northern Hemisphere influenza vaccine},
   author={Gouma, Sigrid and Weirick, Madison and Hensley, Scott E},
