--- a/tex/main.tex
+++ b/tex/main.tex
@@ -43,32 +43,30 @@ CDC's current solution to this problem is the Influenza Risk Assessment Tool (IR
 
 In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza}, HA and NA respectively. Uncovering and representing these constraints within a predictive framework, which we refer to as the \enet, allows us to estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild. Explicit quantification of these likelihoods then yields a numerical estimate of the probability of a specific strain of interest giving rise to another. Such numerical estimates are impossible to obtain without first inferring the emergent constraints at play specific to a strain,  as well as  the variation of mutational probabilities from one positional index to the next along the AA sequence. Thus, the many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference, do not address these issues. 
 
-
-On account of the fact that  a  strain needs  to be present in sufficiently high numbers in circulation to be  observed and recorded, the sequence data from public databases that we train  with represents strains with high replicative fitness. However, not all variations of the viral genome are equally viable. A lack of proofreading function in influenza viral RNA-polymerase leads to the integration of faulty nucleotides during the viral replication process with a rate of $10^{-3}$ to $10^{-4}$, which results in high mutation rates~\cite{ahlquist2002rna,chen2006avian}. Only specific patterns of such variations can maintain or gain replicative fitness, implying that  the  dependencies between local variations that the \enet uncovers, arises from a  functional necessity of conserving or augmenting  fitness. However, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from   long-term evolution of cytotoxic T lymphocyte (CTL) epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
+The  dependencies between local variations that the \enet uncovers, arises from a  functional necessity of conserving or augmenting  fitness. This follows from the fact that  a  strain needs  to be present in sufficiently high numbers in circulation to be  observed and recorded, implying that the sequence data from public databases that we train  with represents strains with high replicative fitness. A lack of proofreading function in influenza viral RNA-polymerase leads to the integration of faulty nucleotides during the viral replication process with a rate of $10^{-3}$ to $10^{-4}$, which results in high mutation rates~\cite{ahlquist2002rna,chen2006avian}. However, not all variations of the viral genome are equally viable. Only specific patterns of such variations can maintain or gain replicative fitness; thus leading to emergent dependencies between such mutations. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from   long-term evolution of cytotoxic T lymphocyte (CTL) epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these changing constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of  evolving host immunity, and the current strain distribution.  
 
 The ability of the \enet framework to determine the numerical odds of specific sequence variations suggests that we might be able to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions (albeit with some simplifying assumptions), with demonstrated approximate solutions (Fig.~\ref{figscheme}). Thus,  a dominant strain for an upcoming flu season
 may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).
 And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
 
-\DQS{Add details replacing XXX}
+\DQS{Add details replacing XXX}\DQS{add details and example of structure, fixing fig 1 to AA from ATGC}
 We infer our models using the AA sequences of HA and NA proteins from all available unique \infl strains in the NCBI and GISAID databases between the years XXX to present time (2022 April), which leads to a set of 98XXX strains in total. We only consider strains for which both HA and NA sequences are available, and construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, constructing in total XXX \enet{s}. %Forecasts of the upcoming  season's dominant strains are made for each flu season for each hemisphere separately.
 %
-\DQS{add details and example of structure, fixing fig 1 to AA from ATGC}
 Structurally, an \enet comprises an interdependent forest of  local predictors: each such predictor aims to model the observed amino acid ``outcome'' at a specific positional index of the protein of interest, using as features   the bases appearing  at other  locations of the protein sequence (Fig.~\ref{figscheme}b). The algorithm automatically identifies the set of features (AA positions) that influence the outcome at a prticular position, implying that an \enet comprises atmost as many such position-specific predictors as the sequence length of the protein. Currently, the component predictors of an \enet are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive},% . The inter-dependency between these trees implies that we realize a  recursive collection of decision trees, which in our current implementation are  conditional inference trees~\cite{Hothorn06unbiasedrecursive}
 that make sure  each node split during the tree construction has a minimum level of statistical significance in differentiating the resulting child nodes.  %that are%inferred 
 % At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
 \DQS{WHy dont we use phenotypic information}
-Importantly, the \enet component models are inferred purely from the amino acid sequences of the proteins of interest with no additional phenotypic annotation, other than identifying the host animal (and time and place of collection). Despite limiting ourselves to only genotypic information, our approach to probing for deep emergent interdependencies   uncovers a rich structure of fitness-preserving constraints that enable good prediction of future dominant strains. Thus, our modeling approach is a substantial departure from the state of the art; we do not assume models of mutation a priori, and we make use of little information that is specific to \infl genomic sequences, or its life cycle, beyond focusing on HA and NA which are known to be the main targets of neutralizing antibodies~\cite{shao2017evolution}.
+Importantly, the \enet component models are inferred purely from the amino acid sequences of the proteins of interest with no additional phenotypic annotation, other than identifying the host animal (and time and place of collection). Antigenic characterization of different \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}, but incorporation of such phenotypic information, $e.g.$ from deep mutational scanning assays, has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic information our approach is able to distill deep emergent interdependencies that  uncovers a rich structure of fitness-preserving constraints that may be leveraged to outperform strategies explored in the literature. Thus, our modeling approach is a substantial departure from the state of the art; we do not assume models of mutation a priori, and we make use of little information that is specific to \infl genomic sequences, or its life cycle, beyond focusing on HA and NA which are known to be the main targets of neutralizing antibodies~\cite{shao2017evolution}.
 
 
 % that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes. Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from public sequence databases.
 
-Our results consist of improved solution to  two important problems described above: 1)  forecast dominant strain(s) for the next flu season, and 2)  identify high risk strains amongst those collected in non-human hosts in the wild. Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. While it is recognized that even well-matched strains can fail to induce a strong immune response due to previous infection history of vaccine recipients~\cite{cobey2018poor}, strain-matching is a crucial component to realizing high vaccine effectiveness~\cite{gouma2020antigenic}. Our results outline a new approach to improve the effectiveness of the flu shot via sophisticated  pattern-recognition, outperforming current practice (WHO/CDC) as well as  recently reported prediction strategies  using more standard computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
-Importantly, our results indicate that \enet-informed forecast algorithm is able to leverage purely sequence information of specific strains, and without using more detailed phenotypic information such deep mutational scanning data~\cite{huddleston2020integrating,neher2014predicting},  improve  predictive performance.
-
+Our results demonstrate  improved solutions to  two important problems described above, namely: 1)  forecast of dominant strain(s) for the next flu season, and 2)  identification of high risk strains amongst those collected in non-human hosts in the wild. Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. While it is recognized that even well-matched strains can fail to induce a strong immune response due to previous infection history of vaccine recipients~\cite{cobey2018poor}, strain-matching is a crucial component to realizing high vaccine effectiveness~\cite{gouma2020antigenic}. Our results outline a new approach to improve the effectiveness of the flu shot via sophisticated  pattern-recognition, outperforming current practice (WHO/CDC) as well as  recently reported prediction strategies  using more standard computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
+%Importantly, our results indicate that \enet-informed forecast algorithm is able to leverage purely sequence information of specific strains, and without using more detailed phenotypic information such deep mutational scanning data~\cite{huddleston2020integrating,neher2014predicting},  improve  predictive performance.
+%
 %\DQS{What phenotypic information is used by others}
-
-Our primary claim, however,  is the ability to estimate the pandemic potential of novel strains, via our proposed  \erisk score.  The \erisk score closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, and is computable in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
+%
+Our primary claim, however,  is the ability to estimate the pandemic potential of novel strains, via our proposed  \erisk score.  The \erisk score is demonstrated to closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, and is computable in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
 
 
 
