--- a/tex/Figures/tabdata/north_h3n2_ha.tex
+++ b/tex/Figures/tabdata/north_h3n2_ha.tex
@@ -17,5 +17,5 @@ Year & WHO Recommendation & Dominant Strain & \qnet Recommendation & WHO Error &
 2019-20& A/Kansas/14/2017 & A/Kentucky/27/2019 & A/California/7330/2018 &16&12\\\hline
 2020-21& A/Hong  Kong/2671/2019 & A/India/Pun-NIV289524/2021\_Jan & A/California/NHRC-OID\_FDX100215/2019 &16&14\\\hline
 2021-22& A/Cambodia/e0826360/2020 &A/Human/New\_York/PV60641/2022& A/India/Pun-NIV291000/2021\_Jan &14&5\\\hline
-2022-23& -1 &-1& A/Denmark/370/2022 &-1&-1\\\hline
+2022-23& -1 &-1& A/Ireland/14993/2022 &-1&-1\\\hline
 \end{tabular}
