--- a/tex/Figures/tabdata/north_h3n2_na.tex
+++ b/tex/Figures/tabdata/north_h3n2_na.tex
@@ -18,6 +18,6 @@ Year & WHO Recommendation & Dominant Strain & \qnet Recommendation & WHO Error &
 2018-19& A/Singapore/INFIMH-16-0019/2016 & A/Japan/NHRC\_FDX70352/2018 & A/Colorado/11/2017 &4&3\\\hline
 2019-20& A/Kansas/14/2017 & A/Washington/9757/2019 &A/Guangxi-Fangcheng/54/2019&3&11\\\hline
 2020-21& A/Hong  Kong/2671/2019 & A/Bangladesh/1004005/2020 & A/Maryland/02/2019 &3&13\\\hline
-2021-22& A/Cambodia/e0826360/2020 &A/Stockholm/10/2022& A/Darwin/9/2021 &2&2\\\hline
-2022-23& -1 &-1& A/Michigan/UOM10042819294/2021 &-1&-1\\\hline
+2021-22& A/Cambodia/e0826360/2020 &A/Stockholm/10/2022& A/Bangladesh/1916/2020 &2&2\\\hline
+2022-23& -1 &-1& A/Iowa/20/2022 &-1&-1\\\hline
 \end{tabular}
