--- a/tex/Figures/tabdata/south_h1n1_na.tex
+++ b/tex/Figures/tabdata/south_h1n1_na.tex
@@ -20,6 +20,6 @@ Year & WHO Recommendation & Dominant Strain & \qnet Recommendation & WHO Error &
 2018-19& A/Michigan/45/2015 & A/Kenya/47/2018 & A/Kentucky/26/2017 &4&2\\\hline
 2019-20& A/Michigan/45/2015 & A/Texas/7939/2019 & A/Kenya/47/2018 &4&0\\\hline
 2020-21& A/Brisbane/02/2018 &A/Togo/897/2020& A/Texas/7939/2019 &6&5\\\hline
-2021-22& A/Victoria/2570/2019 &A/Cote\_D'Ivoire/1496/2021& A/Togo/0155/2021 &1&7\\\hline
+2021-22& A/Victoria/2570/2019 &A/Cote\_D'Ivoire/1496/2021& A/NAGASAKI/8/2020 &1&6\\\hline
 2022-23& -1 &-1& A/Dakar/35/2021 &-1&-1\\\hline
 \end{tabular}
