--- a/tex/Figures/tabdata/south_h3n2_ha.tex
+++ b/tex/Figures/tabdata/south_h3n2_ha.tex
@@ -17,5 +17,5 @@ Year & WHO Recommendation & Dominant Strain & \qnet Recommendation & WHO Error &
 2019-20& A/Switzerland/8060/2017 & A/Kentucky/27/2019 & A/Santa  Catarina/1200/2018 &13&12\\\hline
 2020-21& A/South Australia/34/2019 & A/India/Pun-NIV289524/2021\_Jan & A/Kentucky/27/2019 &12&14\\\hline
 2021-22& A/Hong Kong/2671/2019 &A/Darwin/9a/2021& A/India/PUN-NIV301718/2021 &19&1\\\hline
-2022-23& -1 &-1& A/Saint-Martin/00754/2022 &-1&-1\\\hline
+2022-23& -1 &-1& A/Latvia/04-86261/2022 &-1&-1\\\hline
 \end{tabular}
