--- a/tex/Figures/tabdata/south_h3n2_na.tex
+++ b/tex/Figures/tabdata/south_h3n2_na.tex
@@ -18,6 +18,6 @@ Year & WHO Recommendation & Dominant Strain & \qnet Recommendation & WHO Error &
 2018-19& A/Singapore/INFIMH-16-0019/2016 & A/Japan/NHRC\_FDX70352/2018 & A/Texas/277/2017 &4&3\\\hline
 2019-20& A/Switzerland/8060/2017 & A/Washington/9757/2019 & A/Pennsylvania/317/2018 &10&10\\\hline
 2020-21& A/South  Australia/34/2019 & A/Bangladesh/1004005/2020 & A/Washington/9757/2019 &1&13\\\hline
-2021-22& A/Hong Kong/2671/2019 &A/India/PUN-NIV301718/2021	& A/Darwin/11/2021 &6&1\\\hline
-2022-23& -1 &-1& A/Texas/12723/2022 &-1&-1\\\hline
+2021-22& A/Hong Kong/2671/2019 &A/India/PUN-NIV301718/2021	& A/India/PUN-NIV301132/2021 &6&4\\\hline
+2022-23& -1 &-1& A/Michigan/UOM10045036720/2022 &-1&-1\\\hline
 \end{tabular}
