--- a/tex/Figures/tabdata/improvement_qnet.tex
+++ b/tex/Figures/tabdata/improvement_qnet.tex
@@ -1,15 +1,17 @@
-\begin{tabular}{C{.5in}|C{.5in}|C{.75in}|C{1.75in}|C{1.75in}}\hline
-Subtype & Gene & Hemisphere & Two  decades  (\%  Improvement) & One  decade  (\%  Improvement) \\\hline
-H1N1&HA& North &31.78&75.00\\\hline
-H1N1&HA& South &34.66&66.28\\\hline
-\rowcolor{lightgray}H1N1&HA&Average&33.22&70.64\\\hline
-H3N2&HA& North &38.76&42.50\\\hline
-H3N2&HA& South &36.72&38.67\\\hline
-\rowcolor{lightgray}H3N2&HA&Average&37.74&40.58\\\hline
-H1N1&NA& North &19.64&56.00\\\hline
-H1N1&NA& South &11.83&50.00\\\hline
-\rowcolor{lightgray}H1N1&NA&Average&15.74&53.00\\\hline
-H3N2&NA& North &13.92&8.57\\\hline
-H3N2&NA& South &11.36&15.91\\\hline
-\rowcolor{lightgray}H3N2&NA&Average&12.64&12.24\\\hline
+\begin{tabular}{C{.5in}|C{.35in}|C{.7in}|C{0.7in}|C{0.6in}|C{0.7in}|C{0.6in}|C{0.7in}|C{0.6in}}
+\cline{4-9}
+\multicolumn{3}{c}{}&\multicolumn{2}{c}{Two decades improvement}&\multicolumn{2}{|c}{One decade improvement}&\multicolumn{2}{|c}{2015-2019 improvement}\\\hline
+Subtype & Gene & Hemisphere & Percent & Total & Percent & Total & Percent & Total\\\hline
+H1N1&HA& North &30.83&3.9&72.83&6.7&86.79&9.2\\\hline
+H1N1&HA& South &33.68&4.6&65.31&6.4&75.47&8.0\\\hline
+\rowcolor{lightgray}H1N1&HA&Average&32.25&4.2&69.07&6.6&81.13&8.6\\\hline
+H3N2&HA& North &38.46&2.9&41.18&3.5&51.61&3.2\\\hline
+H3N2&HA& South &36.43&2.8&39.29&3.3&48.39&3.0\\\hline
+\rowcolor{lightgray}H3N2&HA&Average&37.44&2.9&40.24&3.4&50.00&3.1\\\hline
+H1N1&NA& North &16.67&1.4&58.18&3.2&77.27&6.8\\\hline
+H1N1&NA& South &8.33&0.8&52.38&3.3&63.64&5.6\\\hline
+\rowcolor{lightgray}H1N1&NA&Average&12.50&1.1&55.28&3.3&70.46&6.2\\\hline
+H3N2&NA& North &13.75&0.6&15.00&0.6&76.00&3.8\\\hline
+H3N2&NA& South &11.24&0.5&20.41&1.0&68.00&3.4\\\hline
+\rowcolor{lightgray}H3N2&NA&Average&12.50&0.6&17.70&0.8&72.00&3.6\\\hline
 \end{tabular}
