--- a/tex/Figures/tabdata/improvement_qnet.tex
+++ b/tex/Figures/tabdata/improvement_qnet.tex
@@ -1,17 +1,16 @@
-\begin{tabular}{C{.5in}|C{.35in}|C{.7in}|C{0.7in}|C{0.6in}|C{0.7in}|C{0.6in}|C{0.7in}|C{0.6in}}
-\cline{4-9}
-\multicolumn{3}{c}{}&\multicolumn{2}{c}{Two decades improvement}&\multicolumn{2}{|c}{One decade improvement}&\multicolumn{2}{|c}{2015-2019 improvement}\\\hline
-Subtype & Gene & Hemisphere & Percent & Total & Percent & Total & Percent & Total\\\hline
-H1N1&HA& North &30.83&3.9&72.83&6.7&86.79&9.2\\\hline
-H1N1&HA& South &33.68&4.6&65.31&6.4&75.47&8.0\\\hline
-\rowcolor{lightgray}H1N1&HA&Average&32.25&4.2&69.07&6.6&81.13&8.6\\\hline
-H3N2&HA& North &38.46&2.9&41.18&3.5&51.61&3.2\\\hline
-H3N2&HA& South &36.43&2.8&39.29&3.3&48.39&3.0\\\hline
-\rowcolor{lightgray}H3N2&HA&Average&37.44&2.9&40.24&3.4&50.00&3.1\\\hline
-H1N1&NA& North &16.67&1.4&58.18&3.2&77.27&6.8\\\hline
-H1N1&NA& South &8.33&0.8&52.38&3.3&63.64&5.6\\\hline
-\rowcolor{lightgray}H1N1&NA&Average&12.50&1.1&55.28&3.3&70.46&6.2\\\hline
-H3N2&NA& North &13.75&0.6&15.00&0.6&76.00&3.8\\\hline
-H3N2&NA& South &11.24&0.5&20.41&1.0&68.00&3.4\\\hline
-\rowcolor{lightgray}H3N2&NA&Average&12.50&0.6&17.70&0.8&72.00&3.6\\\hline
+\begin{tabular}{C{.5in}|C{.35in}|C{.7in}|C{0.35in}|C{0.35in}|C{0.4in}|C{0.35in}|C{0.35in}|C{0.4in}|C{0.35in}|C{0.35in}|C{0.4in}}
+\multicolumn{3}{c}{}&\multicolumn{3}{c}{Two decades}&\multicolumn{3}{|c}{One decade}&\multicolumn{3}{|c}{2015-2019}\\\hline
+Subtype & Gene & Hemisphere & Qnet Error & WHO Error & \% Improvement & Qnet Error & WHO Error & \% Improvement & Qnet Error & WHO Error & \% Improvement\\\hline
+H1N1&HA& North &12.67&8.76&30.83&4.38&1.19&72.83&2.52&0.33&86.79\\\hline
+H1N1&HA& South &13.57&9.00&33.68&4.67&1.62&65.31&2.52&0.62&75.47\\\hline
+\rowcolor{lightgray}H1N1&HA&Average&13.12&8.88&32.25&4.53&1.40&69.07&2.52&0.48&81.13\\\hline
+H3N2&HA& North &7.65&4.71&38.46&5.00&2.94&41.18&1.82&0.88&51.61\\\hline
+H3N2&HA& South &7.59&4.82&36.43&4.94&3.00&39.29&1.82&0.94&48.39\\\hline
+\rowcolor{lightgray}H3N2&HA&Average&7.62&4.77&37.44&4.97&2.97&40.24&1.82&0.91&50.00\\\hline
+H1N1&NA& North &8.29&6.90&16.67&2.62&1.10&58.18&2.10&0.48&77.27\\\hline
+H1N1&NA& South &9.14&8.38&8.33&3.00&1.43&52.38&2.10&0.76&63.64\\\hline
+\rowcolor{lightgray}H1N1&NA&Average&8.72&7.64&12.50&2.81&1.27&55.28&2.10&0.62&70.46\\\hline
+H3N2&NA& North &4.21&3.63&13.75&2.11&1.79&15.00&1.32&0.32&76.00\\\hline
+H3N2&NA& South &4.68&4.16&11.24&2.58&2.05&20.41&1.32&0.42&68.00\\\hline
+\rowcolor{lightgray}H3N2&NA&Average&4.44&3.90&12.50&2.34&1.92&17.70&1.32&0.37&72.00\\\hline
 \end{tabular}
