--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -302,6 +302,26 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 
 
 
+%#############################################
+%#############################################
+
+\begin{table}\centering
+\captionN{Riskiest Strains Currently Circulating in Swine}\label{tabrec11}
+
+\sffamily\fontsize{7}{8}\selectfont
+
+\input{Figures/tabdata/swine_combined}
+\flushleft
+
+\fontsize{7}{7}\selectfont
+$^\star$ Converted IRAT Score computed using regression generated from the IRAT vs. Qnet comparison
+\end{table}
+%#############################################
+%#############################################
+
+
+
+
 
 %#############################################
 %#############################################
