--- a/tex/Figures/tabdata/swine_combined.tex
+++ b/tex/Figures/tabdata/swine_combined.tex
@@ -1,24 +1,24 @@
-\begin{tabular}{L{2.1in}|L{0.7in}|L{0.7in}|L{0.7in}}\hline
- \rowcolor{lightgray}H1N1 Strain & HA Risk & NA Risk & Overall Risk \\\hline
- A/swine/Tennessee/A02524414/2022 &0.0201&0.0030&0.0077\\\hline
- A/swine/Missouri/A02750646/2022 &0.0201&0.0070&0.0118\\\hline
- A/swine/Kansas/A02711847/2022 &0.0201&0.0098&0.0141\\\hline
- A/swine/Iowa/A02636572/2022 &0.0166&0.0225&0.0193\\\hline
- A/swine/Iowa/A02636308/2021 &0.0143&0.0266&0.0195\\\hline
- A/swine/Illinois/A02750711/2022 &0.0166&0.0233&0.0197\\\hline
- A/swine/Iowa/A02636616/2022 &0.0166&0.0233&0.0197\\\hline
- A/swine/Oklahoma/A02246915/2022 &0.0166&0.0233&0.0197\\\hline
- A/swine/Colorado/A02636469/2022 &0.0166&0.0233&0.0197\\\hline
- A/swine/Iowa/A02636297/2021 &0.0149&0.0267&0.0200\\\hline
- \rowcolor{lightgray}H3N2 Strain & HA Risk & NA Risk & Overall Risk \\\hline
- A/swine/Indiana/A02636492/2022 &0.0104&0.0113&0.0108\\\hline
- A/swine/Indiana/A02636512/2022 &0.0104&0.0113&0.0108\\\hline
- A/swine/Iowa/A02750695/2022 &0.0110&0.0120&0.0115\\\hline
- A/swine/Oklahoma/A02711859/2022 &0.0122&0.0114&0.0118\\\hline
- A/swine/Iowa/A02636351/2022 &0.0121&0.0119&0.0120\\\hline
- A/swine/Iowa/A02636476/2022 &0.0121&0.0120&0.0121\\\hline
- A/swine/Texas/A02636569/2022 &0.0122&0.0120&0.0121\\\hline
- A/swine/Iowa/A02750726/2022 &0.0123&0.0120&0.0121\\\hline
- A/swine/Iowa/A02750740/2022 &0.0104&0.0156&0.0127\\\hline
- A/swine/Indiana/A02636521/2022 &0.0104&0.0156&0.0127\\\hline
+\begin{tabular}{L{2.1in}|L{0.7in}|L{0.7in}|L{0.7in}|L{1in}}\hline
+ \rowcolor{lightgray}H1N1 Strain & HA Risk & NA Risk & Overall Risk & Converted IRAT Score \\\hline
+ A/swine/Tennessee/A02524414/2022 &0.0201&0.0030&0.0077&6.2\\\hline
+ A/swine/Missouri/A02750646/2022 &0.0201&0.0070&0.0118&6.2\\\hline
+ A/swine/Kansas/A02711847/2022 &0.0201&0.0098&0.0141&6.2\\\hline
+ A/swine/Iowa/A02636572/2022 &0.0166&0.0225&0.0193&6.1\\\hline
+ A/swine/Iowa/A02636308/2021 &0.0143&0.0266&0.0195&6.1\\\hline
+ A/swine/Illinois/A02750711/2022 &0.0166&0.0233&0.0197&6.1\\\hline
+ A/swine/Iowa/A02636616/2022 &0.0166&0.0233&0.0197&6.1\\\hline
+ A/swine/Oklahoma/A02246915/2022 &0.0166&0.0233&0.0197&6.1\\\hline
+ A/swine/Colorado/A02636469/2022 &0.0166&0.0233&0.0197&6.1\\\hline
+ A/swine/Iowa/A02636297/2021 &0.0149&0.0267&0.0200&6.1\\\hline
+ \rowcolor{lightgray}H3N2 Strain & HA Risk & NA Risk & Overall Risk & Converted IRAT Score\\\hline
+ A/swine/Indiana/A02636492/2022 &0.0104&0.0113&0.0108&6.2\\\hline
+ A/swine/Indiana/A02636512/2022 &0.0104&0.0113&0.0108&6.2\\\hline
+ A/swine/Iowa/A02750695/2022 &0.0110&0.0120&0.0115&6.2\\\hline
+ A/swine/Oklahoma/A02711859/2022 &0.0122&0.0114&0.0118&6.2\\\hline
+ A/swine/Iowa/A02636351/2022 &0.0121&0.0119&0.0120&6.2\\\hline
+ A/swine/Iowa/A02636476/2022 &0.0121&0.0120&0.0121&6.2\\\hline
+ A/swine/Texas/A02636569/2022 &0.0122&0.0120&0.0121&6.2\\\hline
+ A/swine/Iowa/A02750726/2022 &0.0123&0.0120&0.0121&6.2\\\hline
+ A/swine/Iowa/A02750740/2022 &0.0104&0.0156&0.0127&6.2\\\hline
+ A/swine/Indiana/A02636521/2022 &0.0104&0.0156&0.0127&6.2\\\hline
  \end{tabular}
