--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -367,6 +367,21 @@ $^\star$ -1 indicates missing data, either from lack of human sequence data avai
 %#############################################
 %#############################################
 
+\begin{table}[!ht]\centering
+\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \qnet Computed Current Risk Scores}\label{irattab}
+
+\sffamily\fontsize{7}{8}\selectfont
+
+\input{Figures/tabdata/irat_average_qdistances_current}
+\flushleft
+
+\fontsize{8}{8}\selectfont
+$^\star$This table contains \qnet scores for IRAT computed using current sequence data, thereby computing the current risk of these strains.  -1 indicates missing data, either from lack of human sequence data available for that virus sub-type (less than 30 strains) or missing IRAT sequence data (in the case of A/duck/New York/1996)
+\end{table}
+
+%#############################################
+%#############################################
+
 
 
 
